# MSU-Guitar-Hero-Game

./: CMakeLists.txt  Doxyfile.doxy  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
SpartanHeroLib/: CMakeLists.txt  Declaration.cpp  Declaration.h  DeclarationVisitor.cpp  DeclarationVisitor.h  DrawVisitor.cpp  DrawVisitor.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Image.cpp  Image.h  Item.cpp  Item.h  ItemLoadVisitor.cpp  ItemLoadVisitor.h  KeyDownVisitor.cpp  KeyDownVisitor.h  KeyUpVisitor.cpp  KeyUpVisitor.h  Level.cpp  Level.h  MainFrame.cpp  MainFrame.h  Meter.cpp  Meter.h  Music.cpp  Music.h  Note.cpp  Note.h  NoteAddVisitor.cpp  NoteAddVisitor.h  NoteTiming.cpp  NoteTiming.h  Score.cpp  Score.h  Scoreboard.cpp  Scoreboard.h  Sound.cpp  (+9 more)
Tests/: CMakeLists.txt  ItemLoadVisitorTest.cpp  LevelTest.cpp  MusicTest.cpp  NoteTest.cpp  SoundboardTest.cpp  gtest_main.cpp
levels/: level3.xml  testemptylevel.xml  testlevel.xml
